# iris_ml_project

./: .gitignore  Dockerfile  README.md  export_data.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py  model.py  schema.py
app/templates/: index.html  result.html
ml/: train.py
models/: model.pkl
tests/: test_api.py  test_model.py
